refactored and did some cleanup, deleted unnecessary classes